@@ -19,6 +19,8 @@ bug fixes (and other actions) for each version of hwloc since version
 Version 2.1.0
 -------------
 * API
+  + Add a new "Die" object (HWLOC_OBJ_DIE) for processors with multiple
+    dies per package.
   + Add the new HWLOC_OBJ_MEMCACHE object type for memory-side caches.
     - They are filtered-out by default, except in command-line tools.
     - They are only available on very recent platforms running Linux 5.2+
